--- a/Sport.Mobile.Shared/Pages/LeagueDetailsPage.xaml
+++ b/Sport.Mobile.Shared/Pages/LeagueDetailsPage.xaml
@@ -88,20 +88,21 @@
 						<local:RankStripView x:Name="rankStrip" Margin="0,10" />
 					</ContentView>
 
-					<cv:CarouselView ItemsSource="{Binding OngoingChallengeViewModels}" x:Name="challengeCarousel" HeightRequest="182"
-						IsVisible="{Binding OngoingChallengeViewModels, Converter={x:Static local:IsEmptyConverter.Instance}}}">
-						<cv:CarouselView.ItemTemplate>
-							<DataTemplate>
-								<local:ChallengeCardView ViewModel="{Binding .}" Margin="3,0"
+          <cv:CarouselView ItemsSource="{Binding OngoingChallengeViewModels}" x:Name="challengeCarousel" HeightRequest="182">
+            <!--https:=""//bugzilla.xamarin.com/show_bug.cgi?id=53382-->
+            <!--IsVisible="{Binding OngoingChallengeViewModels, Converter={x:Static local:IsEmptyConverter.Instance}}}">-->
+            <cv:CarouselView.ItemTemplate>
+              <DataTemplate>
+                <local:ChallengeCardView ViewModel="{Binding .}" Margin="3,0"
 										OnAccepted="{Binding Source={x:Reference rootPage}, Path=AcceptedCommand}"
 										OnPostResults="{Binding Source={x:Reference rootPage}, Path=PostResultsCommand}"
 										OnNudge="{Binding Source={x:Reference rootPage}, Path=NudgeCommand}"
 										OnDeclined="{Binding Source={x:Reference rootPage}, Path=DeclinedCommand}"
 										OnClicked="{Binding Source={x:Reference rootPage}, Path=ClickedCommand}"
 								/>
-							</DataTemplate>
-						</cv:CarouselView.ItemTemplate>
-					  </cv:CarouselView>
+              </DataTemplate>
+            </cv:CarouselView.ItemTemplate>
+          </cv:CarouselView>
 				</StackLayout>
 			</StackLayout>
 
